# LeftOnRead

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
include/peek-a-boo/: Common.hpp  ErrorHandler.hpp  FileGhoster.hpp  PayloadManager.hpp  ProcessExecutor.hpp  SectionManager.hpp
src/: ErrorHandler.cpp  FileGhoster.cpp  PayloadManager.cpp  ProcessExecutor.cpp  SectionManager.cpp  main.cpp
